Updated Monster images and placement