@@ -5,19 +5,31 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 
 public class Dungeon {
     private final Room[][] maze;
-    public static final int SIZE = 8;
+    private final int SIZE = 4;
     private int myNumberOfEntrances;
     private int myNumberOfExits;
     private int myNumberOfPillars;
-    public Dungeon() {
+    private static Dungeon myUniqueInstance;
+
+    public int getSIZE() {
+        return SIZE;
+    }
+
+    private Dungeon() {
         maze = new Room[SIZE][SIZE];
         generateMaze();
+
+    }
+
+    public Room[][] getMaze() {
+        return maze;
     }
 
     private void generateMaze() {
@@ -26,7 +38,7 @@ public class Dungeon {
             // Initialize maze with empty rooms
             for (int i = 0; i < SIZE; i++) {
                 for (int j = 0; j < SIZE; j++) {
-                    maze[i][j] = new Room(); // This will automatically set up the room items
+                    maze[i][j] = new Room(SIZE); // This will automatically set up the room items
                     maze[i][j].setMyX(j);
                     maze[i][j].setMyY(i);
                 }
@@ -44,7 +56,7 @@ public class Dungeon {
 
             // Assign pillars to the selected positions
             char[] pillars = {'A', 'P', 'E', 'I'};
-            Collections.shuffle(List.of(pillars));
+            Collections.shuffle(Arrays.asList(pillars));
 
             for (int i = 0; i < 4; i++) {
                 int[] pos = pillarPositions.get(i);
@@ -52,9 +64,7 @@ public class Dungeon {
                 maze[pos[0]][pos[1]].setMyHasPillar(true);
             }
 
-            // Place entrance and exit
-            maze[0][0].setMyEntrance(true);
-            maze[SIZE - 1][SIZE - 1].setMyExit(true);
+            setEntranceAndExit();
 
             // Check if the maze is traversable
             if (isTraversable()) {
@@ -67,8 +77,31 @@ public class Dungeon {
         }
     }
 
+    private void setEntranceAndExit() {
+        int entranceX;
+        int entranceY = (int) (Math.random() * SIZE);
+        int exitX;
+        int exitY;
+        if(entranceY==0 || entranceY==SIZE-1) {
+            entranceX = (int) (Math.random() * SIZE);
+            exitY = SIZE - 1 - entranceY;
+            exitX = (int) (Math.random() * SIZE);
+        } else{
+            int[]indexes = new int []{0,SIZE-1};
+            int randomIndex = (int) (Math.random() * indexes.length);
+            entranceX = indexes[randomIndex];
+            exitX = SIZE - 1;
+            exitX -= entranceX;
+            exitY =  (int) (Math.random() * SIZE);
+        }
 
-    private boolean dfs(int x, int y, boolean[][] visited) {
+        // Place entrance and exit
+        maze[entranceY][entranceX].setMyEntrance(true);
+        maze[exitY][exitX].setMyExit(true);
+    }
+
+
+    public boolean dfs(int x, int y, boolean[][] visited) {
         if (x < 0 || x >= SIZE || y < 0 || y >= SIZE || visited[x][y])
             return false;
         visited[x][y] = true;
@@ -79,7 +112,8 @@ public class Dungeon {
         } else if(maze[x][y].getMyHasPillar()){
             myNumberOfPillars++;
         }
-        if (myNumberOfEntrances > 1 || myNumberOfExits > 1 || myNumberOfPillars > 4) {
+        if (myNumberOfEntrances > 1 || myNumberOfExits > 1 || myNumberOfPillars > 4 ||
+                maze[x][y].isMyExit() && maze[x][y].isMyEntrance()) {
             return false; // More than one entrance or exit found, maze is invalid
         }
         if (maze[x][y].isMyExit())
@@ -91,12 +125,10 @@ public class Dungeon {
         return up || down || left || right;
     }
 
-    private boolean isTraversable() {
+    public boolean isTraversable() {
         boolean[][] visited = new boolean[SIZE][SIZE];
         return dfs(0, 0, visited) && myNumberOfPillars==4;
     }
-
-
     public void writeMazeToFile(String theFilePath) {
         try (BufferedWriter writer = new BufferedWriter(new FileWriter("DungeonAdventure/src/Maps/" + theFilePath))) {
             // Write the top parts of the rooms in the first row
@@ -104,14 +136,17 @@ public class Dungeon {
             StringBuilder bottomRow = new StringBuilder();
             StringBuilder middleRow = new StringBuilder();
             StringBuilder fillerRow = new StringBuilder();
-
-            String filler = "* - - - * ";
+            StringBuilder bottomFillerRow = new StringBuilder();
+            String bottomFiller = "* - - - * ";
             for (int i = 0; i < SIZE; i++) {
-                fillerRow.append(filler);
+                bottomFillerRow.append(bottomFiller);
             }
+
 
             for (int row = 0; row < maze.length; row++) {
                 for (int col = 0; col < maze[row].length; col++) {
+                    String filler = getFillerString(row, col);
+                    fillerRow.append(filler);
                     topRow.append(maze[row][col].getPartOfTheRoom(maze[row][col], 0));
                     middleRow.append(maze[row][col].getPartOfTheRoom(maze[row][col], 1));
                     bottomRow.append(maze[row][col].getPartOfTheRoom(maze[row][col], 2));
@@ -119,11 +154,12 @@ public class Dungeon {
                 writer.write(topRow.toString() + "\n");
                 writer.write(fillerRow.toString() + "\n");
                 writer.write(middleRow.toString() + "\n");
-                writer.write(fillerRow.toString() + "\n");
+                writer.write(bottomFillerRow.toString() + "\n");
                 writer.write(bottomRow.toString() + "\n");
                 topRow.setLength(0);
                 bottomRow.setLength(0);
                 middleRow.setLength(0);
+                fillerRow.setLength(0);
             }
 
 
@@ -131,6 +167,19 @@ public class Dungeon {
             e.printStackTrace();
         }
     }
+
+    private String getFillerString(int row, int col) {
+        String filler = "* - - - * ";
+        if(maze[row][col].getMyHasMonster() && maze[row][col].getMyMonsterName().equals("Ogre")){
+            filler = "* O - - * ";
+        } else if(maze[row][col].getMyHasMonster() && maze[row][col].getMyMonsterName().equals("Gremlin")){
+            filler = "* G - - * ";
+        }else if((maze[row][col].getMyHasMonster() && maze[row][col].getMyMonsterName().equals("Skeleton"))){
+            filler = "* S - - * ";
+        }
+        return filler;
+    }
+
 
     @Override
     public String toString() {
@@ -148,8 +197,14 @@ public class Dungeon {
         sb.append("+\n");
         return sb.toString();
     }
-
-    public static void main(String[] args) {
-        new Dungeon();
+    public static Dungeon getInstance() {
+        if (myUniqueInstance == null) {
+            myUniqueInstance = new Dungeon();
+        }
+        return myUniqueInstance;
     }
+    public static Dungeon get_TEST_instance(){
+        return new Dungeon();
+    }
+
 }
